--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.jason798</groupId>
     <artifactId>toolbox</artifactId>
 
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>toolbox</name>
@@ -279,8 +279,16 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<compilerArguments>
+						<verbose />
+						<!--<bootclasspath>${java.home}/lib/rt.jar;${java.home}/lib/jce.jar</bootclasspath>-->
+						<bootclasspath>${java.home}/lib/rt.jar</bootclasspath>
+					</compilerArguments>
                 </configuration>
-            </plugin>
+
+
+			</plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
