--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
             <artifactId>commons-pool</artifactId>
             <version>1.6</version>
         </dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 
         <!-- guava -->
         <dependency>
