--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.jason798</groupId>
     <artifactId>toolbox</artifactId>
 
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <packaging>jar</packaging>
 
     <name>toolbox</name>
@@ -70,18 +70,18 @@
 			<artifactId>jul-to-slf4j</artifactId>
 			<version>1.7.12</version>
 		</dependency>
-		<!--log4j -->
+		<!--log4j
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-        </dependency>
-		<!--logback
+        </dependency>-->
+		<!--logback -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
