--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
         </dependency>
 
         <!-- config.common tools -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
