--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
