--- a/common-config-db/pom.xml
+++ b/common-config-db/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.atjl</groupId>
         <artifactId>common-tools-parent</artifactId>
         <version>1.0.0</version>
+        <relativePath>../</relativePath>
     </parent>
 
     <groupId>com.atjl</groupId>
