--- a/common-kafka/src/test/resources/kafka.test.properties
+++ b/common-kafka/src/test/resources/kafka.test.properties
@@ -8,7 +8,7 @@
 ##kafka.producer.poolSize=2
 #kafka.producer.requestTimeout=23423
 
-kafka.propfile=sf-con-test.properties
+kafka.propfile=con-test.properties
 
 kafka.prefix=kafka.consumer
 #consumer
@@ -22,7 +22,6 @@ kafka.consumer.topicClusterTTokenGroupidCTokenHandler=A1:other:null:A1C:8N^5$9sl
 #kafka.consumer.url=http://test
 
 #kafka.consumer.topicClusterTTokenGroupidCTokenHandler=A1:other:null:A1C:8N^5$9sl:com..api.consumer.MessageHandlerTest,A2:other:null:A1C:8N^5$9sl:com..consumer.MessageHandlerTest
-
 
 #consumer optional
 #kafka.consumer.threadCount=4
