--- a/common-dep/pom.xml
+++ b/common-dep/pom.xml
@@ -50,7 +50,6 @@
 		<zkclient.version>0.4</zkclient.version>
 		<!-- kafka -->
 		<kafka-clients.version>0.8.2.1</kafka-clients.version>
-		<sf-kafka.version>1.11</sf-kafka.version>
 		<jsoup.version>1.8.1</jsoup.version>
 		<scala-library.version>2.10.4</scala-library.version>
 		<metrics-core.version>2.2.0</metrics-core.version>
@@ -199,22 +198,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<!-- 基础包 -->
-			<dependency>
-				<groupId>com.sf.sgs</groupId>
-				<artifactId>sgs-framework-boot-common</artifactId>
-				<version>${sgs-framework-boot-common.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sf.sgs</groupId>
-				<artifactId>sgs-framework-boot-cache</artifactId>
-				<version>${sgs-framework-boot-cache.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sf.sgs</groupId>
-				<artifactId>sgs-locale</artifactId>
-				<version>${sgs-locale.version}</version>
-			</dependency>
+
 			<!-- dubbo -->
 			<dependency>
 				<groupId>com.alibaba</groupId>
@@ -242,53 +226,20 @@
 				<artifactId>kafka-clients</artifactId>
 				<version>${kafka-clients.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>com.sf.kafka</groupId>
-				<artifactId>sf-kafka_2.10_1.6_1.0</artifactId>
-				<version>${kafka-clients.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sf.kafka</groupId>
-				<artifactId>sf-kafka-api-core</artifactId>
-				<version>${sf-kafka.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sf.kafka</groupId>
-				<artifactId>sf-kafka-api-check-valid</artifactId>
-				<version>${sf-kafka.version}</version>
-			</dependency>
+
 			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
 				<version>${jsoup.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>com.sf.kafka</groupId>
-				<artifactId>scala-library</artifactId>
-				<version>${scala-library.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sf.kafka</groupId>
-				<artifactId>metrics-core</artifactId>
-				<version>${metrics-core.version}</version>
-			</dependency>
 
-			<!-- 对接公司ESB -->
 			<dependency>
 				<groupId>dom4j</groupId>
 				<artifactId>dom4j</artifactId>
 				<version>${dom4j.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>com.sf.esb</groupId>
-				<artifactId>sap-esb-interface</artifactId>
-				<version>1.0</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sf.esb</groupId>
-				<artifactId>sftpClient</artifactId>
-				<version>1.1.0</version>
-			</dependency>
+
+
 			<dependency>
 				<groupId>com.jcraft</groupId>
 				<artifactId>jsch</artifactId>
@@ -299,12 +250,7 @@
 				<artifactId>zip4j</artifactId>
 				<version>1.3.2</version>
 			</dependency>
-			<!-- APP -->
-			<dependency>
-				<groupId>com.sf.app</groupId>
-				<artifactId>axmlPrinter2</artifactId>
-				<version>1.0</version>
-			</dependency>
+
 			<!-- resteasy -->
 			<dependency>
 				<groupId>org.jboss.resteasy</groupId>
@@ -1561,24 +1507,19 @@
 				<artifactId>wsdl4j</artifactId>
 				<version>${wsdl4j.version}</version>
 			</dependency>
-			<!--
-<dependency>
-	<groupId>com.sf.sgs</groupId>
-	<artifactId>log-log4j</artifactId>
-	<version>${log.version}</version>
-</dependency>-->
+
 
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
 		<repository>
-			<id>sf-private-reponsitory</id>
-			<name>SF private repository</name>
+			<id>private-reponsitory</id>
+			<name>private repository</name>
 			<url>x</url>
 		</repository>
 		<repository>
 			<id>cobg-private-repos</id>
-			<name>SF COBG repository</name>
+			<name>repository</name>
 			<url>x</url>
 		</repository>
 	</repositories>
@@ -1796,7 +1737,7 @@
 					<version>2.12.1</version>
 					<configuration>
 						<linkXRef>true</linkXRef>
-						<configLocation>sf-checkstyle.xml</configLocation>
+						<configLocation>checkstyle.xml</configLocation>
 					</configuration>
 				</plugin>
 				<!-- FindBugs -->
