--- a/mybatis-plugin/mybatis-generator-logic-delete-plugin/pom.xml
+++ b/mybatis-plugin/mybatis-generator-logic-delete-plugin/pom.xml
@@ -2,12 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.atjl</groupId>
-		<artifactId>common-tools-parent</artifactId>
-		<version>1.0.0</version>
-		<relativePath>../</relativePath>
-	</parent>
+
+    <parent>
+        <groupId>com.atjl</groupId>
+        <artifactId>common-parent</artifactId>
+        <version>2.0.0</version>
+    </parent>
+
+	<!--<parent>-->
+		<!--<groupId>com.atjl</groupId>-->
+		<!--<artifactId>common-tools-parent</artifactId>-->
+		<!--<version>1.0.0</version>-->
+		<!--&lt;!&ndash;<relativePath>../</relativePath>&ndash;&gt;-->
+	<!--</parent>-->
 
     <groupId>com.atjl.mybatis.plugin</groupId>
     <artifactId>logic-delete-plugin</artifactId>
