--- a/common-logs/common-log-db/pom.xml
+++ b/common-logs/common-log-db/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.atjl</groupId>
         <artifactId>common-log-parent</artifactId>
-		<version>6.1.0</version>
+		<version>6.2.0</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.atjl</groupId>
             <artifactId>common-api</artifactId>
-            <version>1.0.0</version>
+            <version>${util.version}</version>
         </dependency>
 
         <dependency>
