--- a/common-utils/common-office/pom.xml
+++ b/common-utils/common-office/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.atjl</groupId>
         <artifactId>common-util-parent</artifactId>
-        <version>5.2.0</version>
+        <version>5.6.0</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.atjl</groupId>
             <artifactId>common-api</artifactId>
-            <version>1.0.0</version>
+            <version>${util.version}</version>
         </dependency>
 
         <!--         <dependency>
