feat(all): json db add batch update MOD

--- a/mybatis-plugin/mybatis-generator-logic-delete-plugin/pom.xml
+++ b/mybatis-plugin/mybatis-generator-logic-delete-plugin/pom.xml
@@ -18,7 +18,7 @@
 
     <groupId>com.atjl.mybatis.plugin</groupId>
     <artifactId>logic-delete-plugin</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>mybatis-generator-logic-delete-plugin</name>
 
