--- a/common-db-retry/pom.xml
+++ b/common-db-retry/pom.xml
@@ -10,15 +10,15 @@
 
     <groupId>com.atjl</groupId>
     <artifactId>common-db-retry</artifactId>
-    <version>6.0.0</version>
+    <version>6.6.0</version>
 
     <name>common-db-retry</name>
     <packaging>jar</packaging>
 
     <properties>
-        <util.version>5.10.0</util.version>
-        <config.version>5.0.0</config.version>
-        <validator.version>5.0.0</validator.version>
+        <util.version>6.0.0</util.version>
+        <!--<config.version>5.0.0</config.version>-->
+        <validator.version>5.11.0</validator.version>
     </properties>
 
     <dependencies>
@@ -33,11 +33,11 @@
             <artifactId>common-util-ex</artifactId>
             <version>${util.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.atjl</groupId>
-            <artifactId>common-config-api</artifactId>
-            <version>${config.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.atjl</groupId>-->
+            <!--<artifactId>common-config-api</artifactId>-->
+            <!--<version>${config.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.atjl</groupId>
             <artifactId>common-validator</artifactId>
@@ -156,23 +156,7 @@
     <build>
         <plugins>
             <!-- mvn mybatis-generator:generate -->
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.2</version>
-                <configuration>
-                    <verbose>true</verbose>
-                    <overwrite>true</overwrite>
-                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>${mysql.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -220,6 +204,30 @@
                 <configuration>
                     <skipTests>${maven.test.skip}</skipTests>
                 </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.atjl.mybatis.plugin</groupId>
+                        <artifactId>logic-delete-plugin</artifactId>
+                        <version>1.0.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
         </plugins>
