--- a/common-db-service/pom.xml
+++ b/common-db-service/pom.xml
@@ -16,7 +16,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <util.version>5.2.0</util.version>
+        <util.version>6.0.0</util.version>
         <config.version>5.1.0</config.version>
         <!--<validator.version>5.0.0</validator.version>-->
     </properties>
@@ -33,16 +33,16 @@
             <artifactId>common-util-ex</artifactId>
             <version>${util.version}</version>
         </dependency>
-<!--         <dependency>
-            <groupId>com.atjl</groupId>
-            <artifactId>common-config-api</artifactId>
-            <version>${config.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.atjl</groupId>
-            <artifactId>common-validator</artifactId>
-            <version>${validator.version}</version>
-        </dependency> -->
+        <!--         <dependency>
+                    <groupId>com.atjl</groupId>
+                    <artifactId>common-config-api</artifactId>
+                    <version>${config.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.atjl</groupId>
+                    <artifactId>common-validator</artifactId>
+                    <version>${validator.version}</version>
+                </dependency> -->
         <!-- other pkg -->
 
         <dependency>
@@ -72,7 +72,12 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
         </dependency>
-
+        <!-- 第三方 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.6</version>
+        </dependency>
 
         <!-- log start -->
         <dependency>
