--- a/db-front/src/test/resources/jdbc.properties
+++ b/db-front/src/test/resources/jdbc.properties
@@ -1,7 +1,9 @@
-#jdbc.url=jdbc:mysql://10.202.125.245:3306/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://10.202.125.245:3306/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 jdbc.username=test
 jdbc.password=test
+
 jdbc.type=mysql
 jdbc.driverclass=com.mysql.jdbc.Driver
 maxActive=15
