--- a/common-utils/common-office/pom.xml
+++ b/common-utils/common-office/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.atjl</groupId>
         <artifactId>common-util-parent</artifactId>
-        <version>6.8.3</version>
+        <version>6.8.5</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -17,30 +17,60 @@
     <name>common-office</name>
 
     <properties>
+        <poi.version>3.14</poi.version>
         <!--<swagger.version>2.2.2</swagger.version>-->
         <!--<jsckson.version>2.8.7</jsckson.version>-->
     </properties>
 
     <dependencies>
-        <!--
+
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>3.12</version>
-        </dependency>-->
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-excelant</artifactId>
-            <version>3.9</version>
+            <version>${poi.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.opensagres.xdocreport</groupId>
+            <artifactId>xdocreport</artifactId>
+            <version>1.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>ooxml-schemas</artifactId>
+            <version>1.3</version>
+        </dependency>
+
+
+
 
         <dependency>
             <groupId>com.atjl</groupId>
             <artifactId>common-util</artifactId>
             <version>${util.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.atjl</groupId>
             <artifactId>common-api</artifactId>
@@ -53,7 +83,7 @@
                     <version>2.3.9</version>
                 </dependency> -->
 
-        <!--logback -->
+        <!--logback
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -74,7 +104,7 @@
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
-
+    -->
 
         <dependency>
             <groupId>org.springframework</groupId>
