--- a/common-biz/pom.xml
+++ b/common-biz/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <config.api.version>5.1.1</config.api.version>
         <util.version>7.0.4</util.version>
+        <log.version>6.3.0</log.version>
     </properties>
 
     <dependencies>
@@ -33,6 +34,11 @@
             <groupId>com.atjl</groupId>
             <artifactId>common-util-ex</artifactId>
             <version>${util.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atjl</groupId>
+            <artifactId>common-log</artifactId>
+            <version>${log.version}</version>
         </dependency>
 
         <dependency>
@@ -85,6 +91,14 @@
             <version>1.7.12</version>
         </dependency>
         <!--log end -->
+        <!-- for test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
